--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: Welcome to my homepage!! Very glad to meet all you guys. 
+description: Feel free to bookmark this to keep an eye on my project updates
