--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-cayman
 title: Welcome to my homepage!! Very glad to meet all you guys. 
 description: Feel free to bookmark this to keep an eye on my project updates
